[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentos"
version = "0.1.0"
description = "A kernel-style operating layer for a pool of local LLM-backed agents"
requires-python = ">=3.11"
dependencies = ["ollama>=0.4"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
monitor = ["rich"]

[tool.setuptools.packages.find]
include = ["agentos*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
